# backend/docs/swagger.json
@@ -7,7 +7,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/analysis/statistics/getBasicCount": {
+        "/analysis/analysis/getBasicCount": {
             "get": {
                 "description": "获取业务员总数，客户总数",
                 "produces": [
@@ -28,7 +28,7 @@
                 }
             }
         },
-        "/analysis/statistics/getCustomerCountByUser": {
+        "/analysis/analysis/getCustomerCountByUser": {
             "get": {
                 "produces": [
                     "application/json"
@@ -48,7 +48,7 @@
                 }
             }
         },
-        "/analysis/statistics/getCustomerTrendChart": {
+        "/analysis/analysis/getCustomerTrendChart": {
             "get": {
                 "produces": [
                     "application/json"
@@ -58,6 +58,35 @@
                 ],
                 "summary": "获取客户总数趋势图",
                 "operationId": "getCustomerTrendChart",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ApiResult-array_analysis_CustomerTrendChart"
+                        }
+                    }
+                }
+            }
+        },
+        "/analysis/analysis/getCustomerTrendChartByUserId": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "AnalysisController"
+                ],
+                "summary": "根据用户id获取客户总数趋势图",
+                "operationId": "getCustomerTrendChartByUserId",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户id",
+                        "name": "userId",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
